# skele

./: .gitignore  Cargo.toml  LICENSE.txt  NOTICE  README.md  rustfmt.toml  setup.py
py/: calckey.py
py/skele/: __init__.py  __main__.py
rustybones/: Cargo.toml  Makefile
rustybones/src/: lib.rs
skele/: Cargo.toml
skele/src/: ciphered.rs  clipboard.rs  kdf.rs  main.rs  serde_helpers.rs  state.rs  types.rs
