[package]
name          = "skele"
version       = "0.2.2"
authors       = ["Matti Hänninen <matti@mjhanninen.com>"]
description   = "Command line tool for calculating passwords for online identities"
homepage      = "https://github.com/mjhanninen/skele.git"
license       = "BSD"
readme        = "../README.md"
repository    = "https://github.com/mjhanninen/skele.git"
edition       = "2021"

[dependencies]
rpassword     = "^0.2"
rustybones    = { version = "*", path = "../rustybones" }
term          = "0.7.0"
serde         = "^1.0"
serde_json    = "^1.0"
