[package]
name          = "skele"
version       = "0.3.0"
authors       = ["Matti Hänninen <matti@mjhanninen.com>"]
description   = "Command line tool for calculating passwords for online identities"
homepage      = "https://github.com/mjhanninen/skele.git"
license       = "GPL-3.0-or-later"
readme        = "../README.md"
repository    = "https://github.com/mjhanninen/skele.git"
edition       = "2021"

[dependencies]
aes-gcm          = "^0.10"
anyhow           = "^1.0"
argon2           = "^0.5"
base64ct         = "*" # argon2 determines
crossterm        = "^0.25"
directories-next = "^2.0"
rand_core        = "*" # aes-gcm and argon2 determines
requestty        = { version = "^0.5.0", features = ["crossterm"] }
rpassword        = "^0.2"
rustybones       = { path = "../rustybones" }
serde            = { version = "^1.0", features = ["derive"] }
serde_json       = "^1.0"
thiserror        = "^1.0"

[target.'cfg(target_os = "linux")'.dependencies]
wl-clipboard-rs = "0.8.0"

[target.'cfg(target_os = "macos")'.dependencies]
arboard = "^3.2"
